--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dokterkit" >
+    package="com.example.dokterkit">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,16 +10,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DokterKit" >
-        <activity android:name=".EditProfileActivity" >
-        </activity>
+        android:theme="@style/Theme.DokterKit">
+        <activity android:name=".NavigationActivity"></activity>
+        <activity android:name=".cardNameActivity" />
+        <activity android:name=".infoNilaiRujukanActivity" />
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".SeeDataActivity" />
         <activity android:name=".WaitActivity" />
         <activity android:name=".DataPasienActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".HomeActivity" />
         <activity android:name=".TatalaksanaActivity" />
         <activity android:name=".ManifestasiKlinisActivity" />
         <activity android:name=".KomplikasiActivity" />
@@ -29,8 +32,7 @@
         <activity android:name=".AnamnesisActivity" />
         <activity android:name=".AddDataActivity" />
         <activity android:name=".GiziActivity" />
-        <activity android:name=".FilesActivity" />
-        <activity android:name=".SplashScreenActivity" >
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
