--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DokterKit">
-        <activity android:name=".NavigationActivity"></activity>
+        <activity android:name=".AddActivity"></activity>
+        <activity android:name=".NavigationActivity" />
         <activity android:name=".cardNameActivity" />
         <activity android:name=".infoNilaiRujukanActivity" />
         <activity android:name=".EditProfileActivity" />
